--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,3 +1,16 @@
+.card{
+    width: 280px;
+    height: 140px;
+    border-radius: 10px;
+    color: white;
+}
+.widget1{
+    background: linear-gradient( rgba(245, 63, 123), rgba(245, 63, 123) 50%, rgba(255, 255, 255) 10%, rgba(245, 63, 123),rgba(245, 63, 123));
+
+}
+.widget2{
+    background: linear-gradient( rgba(72, 98, 196, 1.0),rgba(72, 98, 196, 1.0) 50%, rgb(255, 255, 255) 10%, rgba(72, 98, 196, 1.0),rgba(72, 98, 196, 1.0));
+}
 h1{
     font-family: 'Roboto';
     font-size: 30px;
