--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -10,19 +10,24 @@
     top: 90px; 
     left: 0;
     overflow-y: auto;
-    transition: transform 0.3s ease;
 }
 #sidebar-wrapper .list-group-item {
     color: black; 
     background-color: transparent;
-    border: none; 
-    transition: background-color 0.3s ease, color 0.3s ease; 
+    border: none;  
+    margin-top: 5px;
+    padding: 8px;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #sidebar-wrapper .list-group-item:hover {
     background-color: var(--couleur-principal); 
     border-radius: 8px;
     color: white; 
+    padding: 8px;
+
 }
 
 #sidebar-wrapper .list-group-item.active {
@@ -43,7 +48,7 @@
     flex: 1;
     width: 100%;
     margin-left: 250px;
-    transition: margin-left 0.3s ease;
+    padding-top: 56px;
 }
 
 .navbar-custom {
@@ -100,12 +105,7 @@
     color: var(--couleur-principal);
 }
 
-.list-group-item {
-    position: relative;
-    padding: 15px 20px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
+
 
 .list-group-item i {
     margin-right: 10px;
@@ -114,6 +114,7 @@
 .list-group-item.active {
     background-color: var(--couleur-principal);
     color: white;
+    padding: 8px;
 }
 
 #logout {
