--- a/public/css/listeEvenementsUser.css
+++ b/public/css/listeEvenementsUser.css
@@ -45,12 +45,17 @@
 
 .row {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
 }
 .row p{
     font-size: 18px;
     font-weight: bold;
+}
+.row p i{
+    font-size: 30px;
+    color: var(--couleur-secondaire);
+    margin-right: 8px;
 }
 .icons {
     margin-top: 10px;
@@ -64,10 +69,91 @@
 
 .icons a {
     display: inline-block;
-    margin-right: 10px;
+    margin-right: 20px;
     text-decoration: none;
     color: #333;
 }
 .icons a i{
     color: var(--couleur-principal);
+    font-size: 30px;
+}
+.informations {
+    height: 620px;
+   
+}
+.informations .modal-body .row img.image{
+    width:480px;
+    height: 490px;
+   border-top-left-radius: 80px;
+   border-bottom-left-radius: 80px;
+   border-top-right-radius: 230.5px;
+}
+.informations .modal-body .row img.star{
+    width:50px;
+   position: absolute;
+   left: 85%;
+   top: 10px;
+}
+.informations .modal-body .row h2{
+    margin-bottom: 20px;
+    font-size: 26px;
+    font-family: roboto;
+    text-align: center;
+    color: var(--couleur-secondaire);
+    font-weight: bold;
+}
+.informations .modal-body .row p{
+    width: 90%;
+    font-size: 18px;
+    font-family: roboto;
+    text-align: justify;
+    font-weight: 500;
+}
+.informations .modal-body .row p i{
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    margin-left: 5px;
+}
+.informations .modal-body .row .date_lieu{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 18px;
+    margin-bottom: 10px;
+   
+}
+
+.informations .modal-body .row a.btn-reserver{
+    width: 300px; 
+   height: 50px;
+   background-color: #F53F7B;
+   color: white;
+   text-align: center;
+   border-radius: 8px;
+   font-size: 22px;
+   font-weight: bold;
+}
+.icon-circle {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: var(--couleur-principal); 
+    color: white;
+    margin-right: 10px;
+}
+.info-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.info-item strong {
+    margin-right: 5px;
+}
+.text-center {
+    text-align: center;
+    margin-top: 20px;
 }
