--- a/public/css/listeEvenementsUser.css
+++ b/public/css/listeEvenementsUser.css
@@ -43,16 +43,16 @@
     font-weight: bold;
 }
 
-.row {
+.card  .row {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-.row p{
+.card  .row p{
     font-size: 18px;
     font-weight: bold;
 }
-.row p i{
+.card .row p i{
     font-size: 30px;
     color: var(--couleur-secondaire);
     margin-right: 8px;
@@ -94,7 +94,7 @@
    left: 85%;
    top: 10px;
 }
-.informations .modal-body .row h2{
+.informations .modal-body .row h2, .modal-body .row h2{
     margin-bottom: 20px;
     font-size: 26px;
     font-family: roboto;
@@ -102,25 +102,25 @@
     color: var(--couleur-secondaire);
     font-weight: bold;
 }
-.informations .modal-body .row p{
+ .modal-body .row p{
     width: 90%;
     font-size: 18px;
     font-family: roboto;
     text-align: justify;
     font-weight: 500;
 }
-.informations .modal-body .row p i{
+ .modal-body .row p i{
     color: white;
     font-size: 25px;
     text-align: center;
-    margin-left: 5px;
+    margin-left: 0;
 }
-.informations .modal-body .row .date_lieu{
+ .modal-body .row .date_lieu{
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-size: 18px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
    
 }
 
@@ -133,6 +133,7 @@
    border-radius: 8px;
    font-size: 22px;
    font-weight: bold;
+   margin-top: 10%;
 }
 .icon-circle {
     display: inline-flex;
@@ -156,4 +157,111 @@
 .text-center {
     text-align: center;
     margin-top: 20px;
+}
+.reservation .modal-body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.modal-body .row .stars{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+ .modal-body .row img.star2{
+    width:50px;
+   position: absolute;
+  left: 90%;
+   top: 10px;
+}
+ .modal-body .row img.star1{
+    width:50px;
+   position: absolute;
+   right: 90%;
+   top: 10px;
+}
+.modal-body .row .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+ .modal-body .row h1{
+    margin-bottom: 20px;
+    font-size: 28px;
+    font-family: roboto;
+    text-align: center;
+    color: var(--couleur-principal);
+    font-weight: bold;
+}
+.modal-body .row .container .date_lieu{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    margin-bottom: 10px;
+    width: 100%;
+    margin-left: 18%;
+    gap: 10%;
+   
+}
+.reservation .modal-body .row .boutons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-left: 60%;
+    gap: 100%;
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+
+.reservation .modal-body .row button.btn-annuler{
+    width: 200px; 
+   height: 50px;
+   background-color: transparent;
+   color: #F53F7B;
+   border: 1px solid #F53F7B;
+   text-align: center;
+   border-radius: 8px;
+   font-size: 22px;
+   font-weight: bold;
+}
+.reservation .modal-body .row button.btn-valider{
+    width: 200px; 
+   height: 50px;
+   background-color: #F53F7B;
+   color: white;
+   text-align: center;
+   border-radius: 8px;
+   font-size: 22px;
+   font-weight: bold;
+}
+.modal-body .row .stars_end{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20%;
+}
+.modal-body .row .stars_end img.star2{
+    width:50px;
+   position: absolute;
+  left: 90%;
+   top: 90%;
+}
+ .modal-body .row .stars_end img.star1{
+    width:50px;
+   position: absolute;
+   right: 90%;
+   top: 90%;
+} 
+.modal-body .row h3{
+    margin-bottom: 20px;
+    font-size: 18px;
+    font-family: roboto;
+    text-align: center;
+    font-weight: bold;
 }
