--- a/public/css/header.css
+++ b/public/css/header.css
@@ -81,3 +81,22 @@
     border-color: var(--couleur-secondaire);
 }
 
+/* Positionnement initial du menu burger en dehors de l'écran à droite */
+@media (max-width: 992px) {
+    .navbar-collapse {
+        position: fixed;
+        top: 55px;
+        right: -250px;
+        width: 250px;
+        height: 100%;
+        background-color: white;
+    }
+
+    .navbar-collapse.show {
+        right: 0;
+    }
+    .navbar-nav{
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+}
