--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -1,3 +1,4 @@
+
 :root {
     --couleur-principal: #F53F7B;
     --couleur-secondaire: #4862C4;
@@ -10,8 +11,9 @@
     top: 90px; 
     left: 0;
     overflow-y: auto;
+    transition: transform 0.3s ease;
 }
-#sidebar-wrapper .list-group-item {
+#sidebar-wrapper .list-group-item ,.btn-link {
     color: black; 
     background-color: transparent;
     border: none;  
@@ -20,44 +22,42 @@
     width: 95%;
     margin-left: auto;
     margin-right: auto;
+    text-decoration: none;
 }
-
-#sidebar-wrapper .list-group-item:hover {
+#sidebar-wrapper .list-group-item:hover,.btn-link:hover {
     background-color: var(--couleur-principal); 
     border-radius: 8px;
     color: white; 
     padding: 8px;
-
+    text-decoration: none;
 }
-
-#sidebar-wrapper .list-group-item.active {
+#sidebar-wrapper .list-group-item.active,.btn-link.active {
     background-color: var(--couleur-principal);
     border-radius: 8px;
     color: white; 
+    text-decoration: none;
 }
-.list-group-item i {
+.list-group-item i ,.btn-link i{
     width: 24px; 
     text-align: center;
 }
-
-.list-group-item span {
+.list-group-item span ,.btn-link span{
     margin-left: 8px; 
 }
 
 #page-content-wrapper {
     flex: 1;
     width: 100%;
-    margin-left: 250px;
+    margin-left: 200px;
     padding-top: 56px;
+    transition: margin-left 0.3s ease;
 }
-
 .navbar-custom {
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); 
 }
 #wrapper.toggled #sidebar-wrapper {
-    transform: translateX(-250px);
+    transform: translateX(-200px);
 }
-
 #wrapper.toggled #page-content-wrapper {
     margin-left: 0;
 }
@@ -70,22 +70,20 @@
     left: 0;
     z-index: 1030;
 }
-
 .navbar-brand {
     display: flex;
     align-items: center;
 }
-.navbar-brand img{
+.navbar-brand img {
     width: 145px;
     height: 35px;
 }
 .navbar-nav .nav-item {
     margin-right: 15px;
 }
-.navbar-nav .nav-item  .nav-link{
+.navbar-nav .nav-item .nav-link {
     color: black;
 }
-
 .navbar-toggler-icon.custom-toggler {
     background-image: url('data:image/svg+xml;charset=utf8,%3Csvg xmlns%3D"http%3A//www.w3.org/2000/svg" viewBox%3D"0 0 30 30"%3E%3Cpath stroke%3D"%234862C4" stroke-width%3D"2" linecap%3D"round" linejoin%3D"round" d%3D"M4 7h22M4 15h22M4 23h22"%3E%3C/path%3E%3C/svg%3E');
     background-color: transparent;
@@ -96,28 +94,43 @@
     background-color: transparent;
     border: none; 
 }
-
- button .btn-primary{
+button.btn-primary {
     color: var(--couleur-principal);
     background-color: white;
- }
+}
 .navbar-toggler-icon.custom-toggler {
     color: var(--couleur-principal);
 }
-
-
-
 .list-group-item i {
     margin-right: 10px;
 }
-
 .list-group-item.active {
     background-color: var(--couleur-principal);
     color: white;
     padding: 8px;
 }
-
-.main-content{
- 
+.main-content {
     margin-top: 120px;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+    #sidebar-wrapper {
+        transform: translateX(-200px);
+    }
+    #wrapper.toggled #sidebar-wrapper {
+        transform: translateX(0);
+    }
+    #wrapper.toggled #page-content-wrapper {
+        margin-left: 200px;
+    }
+    .navbar-nav {
+        display: none;
+    }
+    .navbar-text{
+        
+    }
+    .main-content {
+        margin-top: 100px;
+    }
 }
