--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -124,6 +124,12 @@ button.btn-primary {
     #wrapper.toggled #page-content-wrapper {
         margin-left: 200px;
     }
+    #page-content-wrapper {
+        flex: 1;
+        width: 100%;
+        margin-left: 20px;
+        padding-top: 5px;
+    }
     .navbar-nav {
         display: none;
     }
