--- a/public/css/listeEvenementsUser.css
+++ b/public/css/listeEvenementsUser.css
@@ -47,7 +47,7 @@
     align-items: center;
 }
 .card .row p {
-    font-size: 18px;
+    font-size:20px;
     font-weight: bold;
 }
 .card .row p i {
@@ -61,7 +61,6 @@
     align-items: center;
     justify-content: space-around;
     gap: 40%;
-    font-size: 18px;
     font-weight: bold;
 }
 .icons a {
@@ -113,9 +112,10 @@
 .modal-body .row .date_lieu {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     font-size: 18px;
     margin-bottom: 30px;
+
 }
 .informations .modal-body .row a.btn-reserver {
     width: 300px;
