--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,6 @@ border: 2px solid black;
 button{
 width: 80%;
 padding: 10px;
-margin-left:40%;
 margin-top: 20px;
 border-radius: 8px;
 background-color:#F53F7B;
@@ -46,6 +45,7 @@ font-size: 18px;
 font-weight: 40px;
 text-align: center;
 border:none;
+
 }
 p{
 text-align: center;
@@ -60,4 +60,50 @@ text-align: center;
 .titre1{
     text-align: center;
    font-weight: bold;
+}
+@media screen and (max-width:900px){
+    body{
+        display: block;
+      margin: 0%;
+    }
+    img{
+        display: none;
+    }
+    .input{
+        display: block;
+        width: 80%;
+        margin-top:5%;
+    }
+    .input3{
+        margin-left: 2%;
+        width: 100%;
+    }
+    input{
+        padding: 10px;
+        border-radius: 8px;
+        width: 100%;
+        margin: 10px;
+        margin-left: 2%;
+    }
+    form{
+        width: 90%;
+        height: 140vh;
+        margin-left: 5%;
+        border: 1px solid black;
+        align-items: center;
+        justify-content: space-between;
+    
+    }
+    .input1{
+        
+        width: 100%;
+    }
+    label{
+        margin-left: 5%;
+    }
+    button{
+        width: 100%;
+       margin-left: 5%;
+        
+        }
 }
