--- a/public/css/show.css
+++ b/public/css/show.css
@@ -56,3 +56,23 @@
 .places i{
     margin-right: 10px;
 }
+
+.bouton {
+    text-align: center; 
+    float: left;
+}
+
+.bouton .btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: var(--couleur-principal);
+    color: white; 
+    text-decoration: none; 
+    border-radius: 8px;
+    transition: background-color 0.3s ease; 
+    margin-right: 20px;
+}
+
+.bouton .btn:hover {
+    background-color: var(--couleur-secondaire); 
+}
