--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -61,3 +61,15 @@ h1{
     width: 100px;
     height: 100px;
 }
+p{
+    margin-top: 20%;
+    
+}
+p i {
+    font-size: 30px;
+   margin-right: 8px;
+}
+p span{
+    font-size: 30px;
+    font-weight: bold;
+}
