--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,52 +1,59 @@
-.event{
+.event {
     color: #F53F7B;
-    font-size:25px;
+    font-size: 25px;
 }
-.my{
-    color:#4862C4;
-    font-size:25px;
+
+.my {
+    color: #4862C4;
+    font-size: 25px;
 }
-.titre1{
+
+.titre1 {
     text-align: center;
-   font-weight: bold;
-   font-size: 20px;
-   
+    font-weight: bold;
+    font-size: 20px;
 }
-.registelabel{
+
+.registelabel {
     color: black;
     font-size: 15px;
     font-weight: bold;
     margin-left: 5%;
 }
-#registeinput{
+
+#registeinput {
     color: black;
     background-color: white;
-    width: 300px; 
-   height: 50px;
-  margin-left: 5%;
+    width: 300px;
+    height: 50px;
+    margin-left: 5%;
 }
-.compte{
+#remembe{
+    margin-left: 5%;
+}
+
+.compte {
     display: flex;
     border: none;
     width: 100%;
-    height: 60%;
+    height: 100vh;
     justify-content: space-between;
-    
+    align-items: end;
 }
-img{
-   float:right;
+
+img {
+    float: right;
     width: 30rem;
-    
 }
-form{
+
+form {
     width: 25rem;
     margin-left: 15%;
-    margin-top: 10%;
     border: 1px solid black;
     padding: 25px;
-    height: 30%;
 }
-#link2{
+
+#link2 {
     color: #4862C4;
     font-size: 15px;
     font-weight: bold;
@@ -54,81 +61,81 @@ form{
     padding-top: 8%;
     margin-left: 50%;
 }
-.button{
-   width: 300px; 
-   height: 50px;
-   margin-left: 5%;
-   background-color: #F53F7B;
-   color: white;
-   text-align: center;
-   border-radius: 8px;
-   font-size: 15px;
-   font-weight: bold;
+
+.button {
+    width: 300px;
+    height: 50px;
+    margin-left: 5%;
+    background-color: #F53F7B;
+    color: white;
+    text-align: center;
+    border-radius: 8px;
+    font-size: 15px;
+    font-weight: bold;
 }
-.text1{
+
+.text1 {
     color: #4862C4;
     font-size: 14px;
     font-weight: bold;
 }
+#email,
+#password {
+    /* Exemple de styles pour les champs d'entrée */
+    width: 300px;
+    height: 50px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+     margin-top: 8px;
+    margin-bottom: 16px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 @media screen and (max-width: 900px) {
-    img{
+    img {
         display: none;
-         
-     }
-     form{
-        width: 200%;
-        margin-top: 10%;
-        padding: 18px;
-        height: 25%;
-        margin-left: -5%;
-      
-       
-    }
-    #registeinput{
-        color: black;
-        background-color: white;
-        width: 250px; 
-       height: 35px;
-     
-    }
-    .button{
-        width: 250px; 
-        height: 40px;
-        margin-left: 5%;
-        background-color: #F53F7B;
-        color: white;
-        text-align: center;
-        border-radius: 8px;
-        font-size: 15px;
-        font-weight: bold;
-     }
-     .compte{
-        
-        border: none;
-        width: 100%;
-        height: 60%;
-       
-        
-    }
-    .event{
-        color: #F53F7B;
-        font-size:18px;
-    }
-    .my{
-        color:#4862C4;
-        font-size:18px;
-    }
-    .titre1{
-        text-align: center;
-       font-weight: bold;
-       font-size: 16px;
-       
-    }
-    .registelabel{
-        color: black;
-        font-size: 12px;
-        font-weight: bold;
-        margin-left: 5%;
     }
 
+    form {
+        width: 100%; /* Ajustement pour prendre toute la largeur */
+        margin-top: 10%;
+        padding: 18px;
+        height: auto; /* Ajustement de la hauteur automatique */
+        margin-left: 0; /* Réinitialisation de la marge */
+    }
+
+    #registeinput {
+        width: 100%; /* Ajustement pour prendre toute la largeur */
+        height: 35px;
+    }
+
+    .button {
+        width: 100%; /* Ajustement pour prendre toute la largeur */
+        height: 40px;
+        margin-left: 0; /* Réinitialisation de la marge */
+    }
+
+    .compte {
+        border: none;
+        width: 100%;
+        height: auto; /* Ajustement de la hauteur automatique */
+    }
+
+    .event {
+        font-size: 18px;
+    }
+
+    .my {
+        font-size: 18px;
+    }
+
+    .titre1 {
+        font-size: 16px;
+    }
+
+    .registelabel {
+        font-size: 12px;
+    }
 }
