--- a/public/css/listeEvenementsUser.css
+++ b/public/css/listeEvenementsUser.css
@@ -15,23 +15,23 @@
     margin-top: 40px;
 }
 .card {
-    width: 488px;
-    height: 650px;
+   
+    height: 470px;
     border: 1px solid #ccc;
     margin-bottom: 30px;
 }
 .card img.image {
-    width: 488px;
-    height: 461px;
+    width: 100%;
+    height: 300px;
     border-top-left-radius: 80px;
     border-bottom-left-radius: 80px;
-    border-top-right-radius: 230.5px;
+    border-top-right-radius: 170.5px;
 }
 .card img.star {
-    width: 50px;
+    width: 40px;
     position: absolute;
     left: 85%;
-    top: 10px;
+    top: 2px;
 }
 .card h2 {
     margin-top: 20px;
